- добавил возможность авторизации JWT
- добавил модели запросов для Swagger

- общие доработки и правки
