# internal/user/model.go
@@ -9,3 +9,14 @@ type User struct {
 	Password  string    `db:"password_hash" json:"password_hash"`
 	CreatedAt time.Time `db:"created_at" json:"created_at"`
 }
+
+// LoginRequest represents payload for login endpoint
+type LoginRequest struct {
+	Email    string `json:"email"`
+	Password string `json:"password"`
+}
+
+// AuthResponse contains JWT token returned after successful login
+type AuthResponse struct {
+	Token string `json:"token"`
+}
